--- a/index.html
+++ b/index.html
@@ -40,37 +40,40 @@
   <!-- Experience Section -->
   <section id="experience" class="py-16 bg-white dark:bg-gray-800">
     <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
-      <h2 class="text-3xl font-bold mb-12 text-center">Professional Experience</h2>
+      <h2 class="text-3xl font-bold mb-12 text-center">Experience</h2>
       <div class="space-y-10">
         <div class="bg-gray-50 dark:bg-gray-700/70 p-8 rounded-xl shadow-sm">
           <h3 class="text-xl font-bold">Research Assistant – Falzarano Family Caregiving Lab</h3>
           <p class="text-indigo-600 dark:text-indigo-400 mb-2">University of Southern California</p>
-          <p class="text-sm text-gray-500 dark:text-gray-400 mb-4">2023 - Present</p>
+          <p class="text-sm text-gray-500 dark:text-gray-400 mb-4">2024 - Present</p>
           <ul class="list-disc pl-5 text-gray-700 dark:text-gray-300 space-y-2">
-            <li>Designed and managed digital interventions for dementia caregivers using REDCap, Digify, and Firebase analytics.</li>
-            <li>Conducted data analysis and reporting for NIH-funded caregiver support projects.</li>
-            <li>Developed backend tracking systems for engagement metrics using Mixpanel APIs.</li>
+            <li>Develop and manage digital research surveys and data collection systems with automated screening, branching logic, and participant randomization features to support multi-phase caregiver studies.</li>
+            <li>Designed, built, and maintained both the Falzarano Family Caregiving Lab website and the CarePair intervention website, integrating accessibility, responsive design, and secure participant data tracking.</li>
+            <li>Developed and implemented engagement analytics tracking for participant portals using Mixpanel, Firebase, and Metabase to drive data-informed platform improvements.</li>
           </ul>
         </div>
 
         <div class="bg-gray-50 dark:bg-gray-700/70 p-8 rounded-xl shadow-sm">
           <h3 class="text-xl font-bold">Accessibility Consultant</h3>
-          <p class="text-indigo-600 dark:text-indigo-400 mb-2">Validus Consulting</p>
-          <p class="text-sm text-gray-500 dark:text-gray-400 mb-4">2022 - 2023</p>
+          <p class="text-indigo-600 dark:text-indigo-400 mb-2">SBC Group</p>
+          <p class="text-sm text-gray-500 dark:text-gray-400 mb-4">2020 - 2023</p>
           <ul class="list-disc pl-5 text-gray-700 dark:text-gray-300 space-y-2">
-            <li>Assisted in accessibility inspections and plan checks under CBC and ADA standards.</li>
-            <li>Prepared proposals, inspection reports, and client documentation.</li>
-            <li>Created digital logging systems to streamline workflow and data integrity.</li>
+            <li>Assisted with accessibility inspections and technical reviews of architectural drawings, site plans, and built environments to verify compliance with CBC Chapter 11B, ADA Standards for Accessible Design, and related accessibility codes.</li>
+            <li>Drafted detailed accessibility reports, proposals, and cost estimates for clients, improving clarity and compliance consistency.</li>
+            <li>Developed and implemented digital tracking systems to streamline project documentation, improve data integrity, and enhance operational efficiency.</li>
           </ul>
         </div>
 
         <div class="bg-gray-50 dark:bg-gray-700/70 p-8 rounded-xl shadow-sm">
-          <h3 class="text-xl font-bold">Undergraduate Research Assistant</h3>
+          <h3 class="text-xl font-bold">Cognitive Science & Machine Learning Undergraduate Studies</h3>
           <p class="text-indigo-600 dark:text-indigo-400 mb-2">UC San Diego – Cognitive Science Department</p>
-          <p class="text-sm text-gray-500 dark:text-gray-400 mb-4">2020 - 2022</p>
+          <p class="text-sm text-gray-500 dark:text-gray-400 mb-4">2019 - 2023</p>
           <ul class="list-disc pl-5 text-gray-700 dark:text-gray-300 space-y-2">
-            <li>Developed cognitive modeling and ML analysis pipelines for EEG datasets.</li>
-            <li>Collaborated on research publications and presented findings at conferences.</li>
+            <li>Designed and implemented user-centered digital experiments and data analysis pipelines, applying machine learning techniques to behavioral and cognitive datasets.</li>
+            <li>Developed interactive dashboards and visualizations for research data using Python libraries such as NumPy, Pandas, Matplotlib, and scikit-learn.</li>
+            <li>Built and maintained web-based research tools and interfaces with HTML and CSS, ensuring responsive layouts and clean, accessible UI design.</li>
+            <li>Applied UX principles and cognitive insights to optimize the presentation and usability of experimental web content./li>
+            <li>Conducted data preprocessing, feature engineering, and predictive modeling to identify behavioral trends and generate actionable insights.</li>
           </ul>
         </div>
       </div>
