--- a/index.html
+++ b/index.html
@@ -199,18 +199,21 @@
       <h2 class="text-3xl font-bold mb-12 text-center">Featured Projects</h2>
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md overflow-hidden transition-transform transform hover:-translate-y-2 hover:shadow-xl">
-          <img src="http://static.photos/technology/640x360/1" alt="EEG Classification" class="w-full h-48 object-cover">
+          <img src="/assets/Google_Deep_Mind.jpg" alt="EEG Classification" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-bold mb-2">EEG Signal Classification</h3>
-            <p class="text-gray-600 dark:text-gray-300 mb-3">Developed a deep learning model to classify EEG signals for brain-computer interfaces.</p>
+            <p class="text-gray-600 dark:text-gray-300 mb-3">Built an EEG classification pipeline that distinguishes eyes-open and eyes-closed brain states using power spectral features and Random Forest modeling.</p>
             <div class="flex flex-wrap gap-2 mb-4">
               <span class="bg-gray-200 dark:bg-gray-700 px-2 py-1 rounded-full text-xs">Python</span>
-              <span class="bg-gray-200 dark:bg-gray-700 px-2 py-1 rounded-full text-xs">TensorFlow</span>
+              <span class="bg-gray-200 dark:bg-gray-700 px-2 py-1 rounded-full text-xs">MNE</span>
               <span class="bg-gray-200 dark:bg-gray-700 px-2 py-1 rounded-full text-xs">EEG</span>
             </div>
             <div class="flex space-x-4 text-indigo-600 dark:text-indigo-400">
-              <a href="#" class="flex items-center hover:text-indigo-800 dark:hover:text-indigo-300"><i data-feather="github" class="mr-1"></i>Code</a>
-              <a href="#" class="flex items-center hover:text-indigo-800 dark:hover:text-indigo-300"><i data-feather="file-text" class="mr-1"></i>Paper</a>
+              <a href="https://github.com/bumbi1/EEG-Brain-State-Classification"
+                target="_blank"
+                class="flex items-center hover:text-indigo-800 dark:hover:text-indigo-300">
+                <i data-feather="github" class="mr-1"></i>Code
+              </a>
             </div>
           </div>
         </div>
@@ -261,7 +264,7 @@
           <div class="flex flex-col items-center bg-gray-100 dark:bg-gray-700 p-6 rounded-2xl shadow-md hover:shadow-lg transition-shadow">
             <i data-feather="github" class="text-indigo-500 w-6 h-6 mb-3"></i>
             <p class="text-sm font-medium text-gray-500 dark:text-gray-400">GitHub</p>
-            <a href="https://github.com/alexchen-cogsci" target="_blank" class="text-base text-indigo-600 dark:text-indigo-400 hover:underline">
+            <a href="https://github.com/bumbi1" target="_blank" class="text-base text-indigo-600 dark:text-indigo-400 hover:underline">
               github.com/bumbi1
             </a>
           </div>
