--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <h2 class="text-3xl font-bold mb-12 text-center">Featured Projects</h2>
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md overflow-hidden transition-transform transform hover:-translate-y-2 hover:shadow-xl">
-          <img src="/assets/Google_Deep_Mind.jpg" alt="EEG Classification" class="w-full h-48 object-cover">
+          <img src="https://bumbi1.github.io/Portfolio/assets/Google_Deep_Mind.jpg" alt="EEG Classification" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-bold mb-2">EEG Signal Classification</h3>
             <p class="text-gray-600 dark:text-gray-300 mb-3">Built an EEG classification pipeline that distinguishes eyes-open and eyes-closed brain states using power spectral features and Random Forest modeling.</p>
